# exf2mbfxml

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: deploy.yaml  run_tests.yaml
src/exf2mbfxml/: analysis.py  classes.py  reader.py  utilities.py  writer.py  zinc.py
tests/: run_tests_with_coverage.py  test_exf2mbfxml.py  test_nesting_sequences.py
tests/resources/: basic_contour.exf  basic_heart_contours.exf  basic_tree.exf  contour_with_marker_names.exf  japanese_vagus.exf  multi_tree_with_annotations.exf  tree_with_branches.exf
